# miaobot

./: .env.dev  README.md  bot.py  pyproject.toml
basic_plugins/: config.py
basic_plugins/miaoyww_tools/: __init__.py  data_source.py
configs/: config.py  path_config.py
miaobo/plugins/bvInfo/: __init__.py
miaobo/plugins/forward_msg/: __init__.py
miaobo/plugins/jrrp/: __init__.py
plugins/: parse_bilibili_info.py  random_cat.py
plugins/bangumi_pusher/: __init__.py  data_source.py
plugins/epic_pusher/: __init__.py  data_source.py
plugins/miaoyww_tools/: __init__.py
plugins/poke/: __init__.py
plugins/random_reply/: __init__.py  data_source.py
service/: log.py
